# bevy_spreadsheets

./: Cargo.toml  DAEMON_INTEGRATION.md  DB_RENAME_PLAN.md  MIGRATION_IMPLEMENTATION.md  README.md  build.rs  repair_metadata.sql
.claude/: settings.local.json
script/: ai_processor.py
src/: add_display_name_cli.rs  check_structure_columns_cli.rs  diagnose_metadata_cli.rs  example_definitions.rs  list_columns_cli.rs  main.rs  repair_metadata_cli.rs  restore_columns_cli.rs  single_instance.rs  sync_column_names_cli.rs
src/cli/: add_display_name.rs  check_structure_columns.rs  diagnose_metadata.rs  list_columns.rs  mod.rs  repair_metadata.rs  restore_columns.rs  sync_column_names.rs
src/settings/: io.rs  mod.rs
src/sheets/: ai_schema.rs  column_data_type.rs  column_definition.rs  column_validator.rs  definitions.rs  events.rs  mod.rs  plugin.rs  random_picker.rs  resources.rs  sheet_grid_data.rs  sheet_metadata.rs  structure_field.rs
src/sheets/database/: checkpoint.rs  connection.rs  daemon_client.rs  daemon_connection.rs  daemon_manager.rs  daemon_protocol.rs  daemon_resource.rs  error.rs  migration.rs  mod.rs  reader.rs  schema.rs  systems.rs  validation.rs  writer.rs
src/sheets/database/migration/: cleanup_temp_new_row_index.rs  dependency_handler.rs  fix_row_index_duplicates.rs  hide_temp_new_row_index_in_metadata.rs  io_helpers.rs  json_extractor.rs  json_migration.rs  mod.rs  occasional_fixes.rs  parent_key_helpers.rs  parent_key_to_row_index.rs  remove_grand_parent_columns.rs
src/sheets/database/reader/: column_parser.rs  column_recovery.rs  metadata_creation.rs  mod.rs  queries.rs  structure_population.rs
src/sheets/database/schema/: helpers.rs  migrations.rs  mod.rs  queries.rs  table_creation.rs  writer.rs
src/sheets/database/systems/: background_state.rs  completion_handler.rs  export_handler.rs  migration_handler.rs  migration_poller.rs  mod.rs  upload_handler.rs
src/sheets/database/writer/: cascades.rs  daemon_utils.rs  deletions.rs  helpers.rs  helpers_tests.rs  insertions.rs  metadata.rs  mod.rs  renames.rs  test_helpers.rs  updates.rs
src/sheets/sheet_metadata/: ai_schema_helpers.rs  deserialization.rs  legacy.rs  mod.rs  structure_helpers.rs
src/sheets/systems/: io.rs  logic.rs  mod.rs
src/ui/: common.rs  mod.rs  systems.rs  validation.rs
src/ui/elements/: editor.rs  mod.rs  popups.rs  top_panel.rs
src/ui/widgets/: context_menu_helpers.rs  linked_column_cache.rs  linked_column_handler.rs  linked_column_visualization.rs  mod.rs  option_widgets.rs  structure_column_widget.rs  technical_column_widget.rs
src/visual_copier/: events.rs  executers.rs  handler.rs  io.rs  mod.rs  plugin.rs  processes.rs  resources.rs
tests/: no_direct_db_writes.rs
(+232 files in other folders)
