[package]
name = "bevy_spreadsheets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy               = "0.16"
bevy_egui          = "0.34.1"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
egui_extras = "0.31.1"
rfd = "=0.15.3"
walkdir = "2.5.0"
keyring = "3.6.2"
bevy-tokio-tasks = "0.16.0"
tokio = { version = "1.44.2", features = ["full"] }
rand = "0.9.1"