[package]
name = "bevy_spreadsheets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy               = "0.16"
bevy_egui          = "0.34.1"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
egui_extras = "0.31.1"
rfd = "=0.15.3"
walkdir = "2.5.0"
keyring = "3.6.2"
bevy-tokio-tasks = "0.16.0"
tokio = { version = "1.44.2", features = ["full"] }
rand = "0.9.1"
bevy_dev_tools = "0.16.0"
image = { version = "0.25.6", default-features = false, features = ["png"] } 
winit = "0.30.10"
gemini_client_rs = "0.3.0"
dotenvy = "0.15.7"

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
embed-resource = "3.0.2"