[package]
name = "skylinedb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "skylinedb"
path = "src/main.rs"

[dependencies]
bevy               = "0.16"
bevy_egui          = "0.34.1"
clap               = { version = "4.5", features = ["derive"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
egui_extras = "0.31.1"
rfd = "=0.15.3"
walkdir = "2.5.0"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
bevy-tokio-tasks = "0.16.0"
tokio = { version = "1.44.2", features = ["full"] }
rand = "0.9.1"
bevy_dev_tools = "0.16.0"
image = { version = "0.25.6", default-features = false, features = ["png"] } 
winit = "0.30.10"
gemini_client_rs = "0.3.0"
dotenvy = "0.15.7"
directories-next = "2.0.0"
thiserror = "2.0.12"
fs_extra = "1.3.0"
chrono = "0.4.41"
pyo3 = "0.25.0"
whoami = "1.6.0"
bevy_framepace = "0.19"
unicode-normalization = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
open = "5.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "namedpipeapi", "synchapi", "errhandlingapi", "winnt", "winerror"] }

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
embed-resource = "3.0.2"
ico = "0.3"
image = { version = "0.25.6", default-features = false, features = ["png"] }
